cockroachdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
spec:
  selector:
    app: cockroachdb
  ports:
    - name: db
      port: 26257
      targetPort: 26257
    - name: http
      port: 8080
      targetPort: 8080
